Fix awful page width on narrow displays; revert scrollable image
Some flex attrs were key to keeping the page width to 100vw.
Removing them enabled scrolling the image, so that's gone again and I'm
sad to see it go, but at least the site looks OK again on half-windows and
mobile devices.

Safari on iOS is pulling some bullshit by positioning the footer
at the bottom when initially drawn and keeping it there when you scroll down,
but fuck Safari on iOS. Firefox Focus on iOS does it properly, interestingly.

--- a/style.css
+++ b/style.css
@@ -25,6 +25,8 @@ body {
 #topContainer {
     overflow: auto;
     height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 
@@ -38,6 +40,7 @@ header, footer {
     width: 100%;
     background: rgba(185, 185, 185, 0.7);
     border: 0;
+    flex-wrap: wrap;
 }
 header h1, footer h1 {
     flex: 1 1 auto;
@@ -65,6 +68,8 @@ footer {
 
 
 #imageContainer {
+    flex: 1;
+    justify-content: center;
     min-height: 0;
 
 }
